--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -108,28 +108,20 @@
                         </table>
                     </div><!-- .left -->
                     <div class="right">
-                        <h3 class="floatleft">Lista de arquivos</h3>
+                        <h3 class="floatleft">Agendamentos</h3>
                         <div class="clear"></div>
-                        <div class="list">
-                        <ul>
-                        {% if schedule.if_month %}
-                            {% for line in schedule.month.human_readable %}
-                            <li>{{ line }}</li>
-                            {% endfor %}
-                            {% endif %}
-                            {% if schedule.if_week %}
-                            {% for line in schedule.week.human_readable %}
-                            <li>{{ line }}</li>
-                            {% endfor %}
-                            {% endif %}
-                            {% if schedule.if_day %}
-                            <li>{{ schedule.day.human_readable }}</li>
-                            {% endif %}
-                            {% if schedule.if_hour %}
-                            <li>{{ schedule.hour.human_readable }}</li>
-                        {% endif %}
-                        </ul>
-                        </div>
+						<div class="list">
+                        <table cellpadding="0" cellspacing="0">
+                            <thead>
+                                <tr><th>Tipo</th><th>Frequência</th><th>Dia</th><th>Hora</th></tr>
+                            </thead>
+                            <tbody>
+            					{% for run in schedule.runs.all %}
+								<tr><th>{{run.level}}</th><th>{{run.kind.name_pt}}</th><th>{{run.day_string}}</th><th>{{run.hour}}:{{run.minute}}</th></tr>
+            					{% endfor %}
+            				</tbody>
+                        </table>
+						</div>
                     </div><!-- .right -->
                     <div class="clear"></div>
                 </div><!-- .body -->
