--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -13,59 +13,51 @@
 {% block page %}
 
 <div class="block">
-
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
 		<h2>{{title}}</h2>
 	</div>
-    <div class="block_content">
-        <form action="/procedures/add/" method="post">
-           {{ form.non_field_errors }}
-           {% for field in form.visible_fields %}
-               {% if field.errors %}
-               <ul class="errorlist">
-                   <li>{{ field.errors }}</li>
-               </ul>
-               {% endif %}
-               <p><label>{{ field.label }}:</label><br />
-                   {% if field.label == 'Schedule' %}
-					{%if selected_schedule%}
-						[{{selected_schedule.name}}]
-						<input type="hidden" name="procedure-schedule" value="{{selected_schedule.id}}" />
-					{% else %}
-                        <a href="/schedules/add/" id="schedule_button" class="minibutton"><span>Criar um agendamento</span></a>{{ field }}
-					{% endif %}
-                   {% else %}
-					{%if field.label == 'Fileset' %}
-                        <a href="/filesets/add/" class="filesets minibutton" id="fileset_button"><span>Criar um conjunto de arquivos</span></a>{{ field }}
-                  		{% else %}
-			            {{ field }}
-					{% endif %}
-                   {% endif %}
-				
-               </p>
-           {% endfor %}
-           {% for hidden in form.hidden_fields %}
-               {{ hidden }}
-           {% endfor %}
-        <div class="pool_value">
-	        <label>Tempo de retencao: <label id="slider_value"></label> dias</label> <label id="slider_value"></label><br />
-	        <div id="slider"></div>
-	        <div class="add_new_pool"><a href="#">Adicionar Outro Valor</a></div>
-	        <div class="clear">&nbsp;</div>
-	    </div>
-	    <div class="pool_new_value">
-	    	<label>Tempo de retencao (em dias):</label><br />
-	        <input type="text" name="pool_retention_alt" id="pool_retention_alt" maxlength="4" value="" class="text small" /><br />
-	    </div>
-	    <hr />
-        <p>
-            <input type="submit" class="submit" value="Criar" />
-        </p>
-        </form>
+	<div class="block_content">
+		<form action="/procedures/add/" method="post">
+			{{ form.non_field_errors }}
+			{% for field in form.visible_fields %}
+				{% if field.errors %}
+			<ul class="errorlist">
+				<li>{{ field.errors }}</li>
+			</ul>
+				{% endif %}
+			<p>
+				<label>{{ field.label }}:</label><br />
+				{% if field.label == 'Schedule' %}
+				<a href="/schedules/add/" id="schedule_button" class="minibutton"><span>Criar um agendamento</span></a><span id="discard_schedule" class="hidden"> ou <a class="minibutton" onClick="unset_schedule()"><span>Descartar e escolher um perfil</span></a></span>
+				{% endif %}
+				{%if field.label == 'Fileset' %}
+				<a href="/filesets/add/" class="filesets minibutton" id="fileset_button"><span>Criar um conjunto de arquivos</span></a><span id="discard_fileset" class="hidden"> ou <a class="minibutton" onClick="unset_fileset()"><span>Descartar e escolher um perfil</span></a></span>
+				{% endif %}
+				{{ field }}
+			</p>
+			{% endfor %}
+			{% for hidden in form.hidden_fields %}
+			{{ hidden }}
+			{% endfor %}
+			<div class="pool_value">
+				<label>Tempo de retencao: <label id="slider_value"></label> dias</label> <label id="slider_value"></label><br />
+				<div id="slider"></div>
+				<div class="add_new_pool"><a href="#">Adicionar Outro Valor</a></div>
+				<div class="clear">&nbsp;</div>
+			</div>
+			<div class="pool_new_value">
+				<label>Tempo de retencao (em dias):</label><br />
+				<input type="text" name="pool_retention_alt" id="pool_retention_alt" maxlength="4" value="" class="text small" /><br />
+			</div>
+			<hr />
+			<p>
+				<input type="submit" class="submit" value="Criar" />
+			</p>
+		</form>
 		<form action="/schedules/add/" method="POST" id="to_schedule_form"></form>
-    </div>
+	</div>
 </div>
 
 {% endblock %}
