Correcao de bug nos reloads de paginas

--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -221,7 +221,10 @@
 {% else %}
 <input type="hidden" id="schedule_name" value="Apenas para este procedimento"/>
 {% endif %}
-
+{% if reload %}
+<button onclick="if (create_schedule() == true) {window.location.reload()}">Criar</button>
+{% else %}
 <button onclick="create_schedule()">Criar</button>
+{% endif %}
 
 {% endblock %}
