Melhorias na interface e revisão de códigos JS

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -103,7 +103,8 @@
     			<div class="bheadl"></div>
     			<div class="bheadr"></div>
 
-    			<h2>Procedimentos</h2>
+    			<h2 class="floatleft">Procedimentos</h2>&nbsp;&nbsp;
+    			<a href="/procedures/list" class="minibutton"><span>Listar todos os procedimentos</span></a>
 
     		</div>		<!-- .block_head ends -->
 
