Atualizando interface da lista de procedimentos

--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -84,7 +84,7 @@
                             Tempo de retenção dos arquivos: <strong>{{procedure.pool_retention_time}}</strong>
                         </div>
                         <div style="width: 29%; float: right;">
-                            Status
+                            <img src="/media/" alt="" />
                         </div>
                         <div class="clear"></div>
                     </div>
