--- a/nimbus/media/css/procedures.css
+++ b/nimbus/media/css/procedures.css
@@ -184,7 +184,7 @@
 .hide table thead th, .hide table tbody td{
     font-size: 11px;
 }
-.status_ok, .status_error, .status_warn{
+.status_ok, .status_error, .status_warning, .status_waiting, .status_running{
     -moz-border-radius: 3px;
     -khtml-border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -197,9 +197,10 @@
     float: left;
     /* width: 80px; */
     margin-right: 8px;
+    padding-left: 32px;
 }
-.status_error{background-color: #C91A1A;}
-.status_warn{background-color: #E0780F;}
-/* .pri_3{background-color: #CDD800;} */
-.status_ok{background-color: #26BF24;}
-/* .pri_5{background-color: #1A8CA5;} */
+.status_error{background: #C91A1A url(/media/icons/stop32.png) left center no-repeat;}
+.status_warning{background: #E0780F url(/media/icons/warning32.png) left center no-repeat;}
+.status_waiting{background: #9da500 url(/media/icons/sleep32.png) left center no-repeat;}
+.status_ok{background: #26BF24 url(/media/icons/check32.png) left center no-repeat;}
+.status_running{background: #1A8CA5 url(/media/icons/exchange32.png) left center no-repeat;}
