Adicionada mensagem sobre IE e removido remotestorages da aplicação

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -12,6 +12,10 @@
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pointLabels.js"></script>
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.cursor.min.js"></script>
 <script type="text/javascript" src="/media/js/home.js"></script>
+<script type="text/javascript">
+    var ie_error = '/base/ie_error';
+    {{ init_message }}
+</script>
 {% endblock %}
 
 {% block content %}
