--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -112,6 +112,12 @@
             {% endif %}
 
             {%block content%}
+            <div class="annoying">
+                O seu navegador n&atilde;o &eacute; confi&aacute;vel para o Nimbus. Nosso software &eacute; testado para os browsers 
+                <a href="http://www.mozilla.com/en-US/firefox/new/" target="_blank">Mozilla Firefox</a> e 
+                <a href="http://www.google.com/chrome/intl/en/make/download-mac.html?brand=CHKZ" target="_blank">Google Chrome</a>. Caso deseje reportar
+                erros ou enviar sujest&otilde;es, visite nosso <a href="http://forum.nimbusbackup.com/">f&oacute;rum</a>.
+            </div>
             {%endblock%}
 
             {%block page%}
