Finalizado a exibição do alerta para IE

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -88,11 +88,16 @@
                             <li><a href="/system/pid_history/">Monitorar processos internos</a></li>
                         </ul>
 					</li>
-					<li class="nobg"><a href="#">Configurações</a>
+					<li><a href="#">Configurações</a>
                         <ul>
                             <li><a href="/users/password_change">Alterar Senha</a></li>
                             <li><a href="/network/config">Configuração de Rede</a></li>
                             <li><a href="/timezone/config">Configuração de Hora</a></li>
+                        </ul>
+					</li>
+					<li class="nobg"><a href="#">Ajuda</a>
+                        <ul>
+                            <li><a href="http://forum.nimbusbackup.com">Fórum</a></li>
                         </ul>
 					</li>
 				</ul>
