Adicionado botão para mostrar local de restauração de arquivos

--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -119,6 +119,7 @@
                 {% endif %}
                 <select name="job_id" class="styled" id="jobs_list">
                     <option value=""> - Selecioneasas um Job - </option>
+                    <option value="">outro job</option>
                 </select>
                 <div class="clear"></div>
             </div>
@@ -134,15 +135,18 @@
 
                 <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
                 
-                <div class="clear"></div>
-                
-                <h2 class="titulo_step">4. Restauração</h2>
+                <div class="clear"></div><hr />
+                <a href="#" class="minibutton open_step_4"><span>Selecionar local para restauração</span></a>
+            </div>
+            <div class="restore_step_4" class="hidden">
+                <h2 class="titulo_step">4. Local para restauração</h2>
                 
                 <ul class="tree_computer"><li class="directory first"><span><a href="#" path="/">Selecione o local para restauração</a></span></li></ul>
                 
     		    <p>
                     <input type="submit" class="submit mid" value="Restaurar" />
                 </p>
+                <div class="clear"></div>
             </div>
         </form>
         
