FIX: Fix de emergência para duplicidade no formulário de backup

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -38,8 +38,8 @@
 	
 	<script type="text/javascript" src="/media/lib/js/custom.js"></script>
 	<!-- style procedure list -->
-	<script type="text/javascript" src="/media/js/procedures.js"></script>
-    <link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
+<!-- 	<script type="text/javascript" src="/media/js/procedures.js"></script> -->
+<!--     <link rel="stylesheet" type="text/css" href="/media/css/procedures.css" /> -->
 </head>
 <body>
 	<div id="hld">
