--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -1,5 +1,6 @@
 {% block headtags %}
 	<link rel="stylesheet" type="text/css" href="/media/css/overcast/jquery-ui-1.8.13.custom.css" />
+	<link rel="stylesheet" type="text/css" href="/media/lib/css/style.css" />
 	<script type="text/javascript" src="/media/js/schedules.js"></script>
 	<script type="text/javascript">
 		// ESTE CODIGO TEM QUE FICAR AQUI
@@ -15,11 +16,19 @@
 		.deleted_run {
 			display: none;
 		}
+		table#inventory{width: 100%;}
+		table#inventory tbody tr td{
+		  padding: 8px;
+		  background: #fafafa;
+		}
+		.remove_schedule{cursor: pointer;}
+		.first_table td{border-bottom: 1px solid #c0c0c0; margin-bottom: 10px;}
 	</style>
 {% endblock %}
 
 {% block page %}
-<table>
+<div class="block">
+<table class="first_table">
 	<tr>
 		<td>
 			<div id="month" class="checkboxes">
@@ -59,7 +68,6 @@
 		</td>
 		<td>
 			<select name="month-level" id="id_month-level">
-				<option value="None">- Escolha o tipo de backup: -</option>
 				{% for level in levels %}
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
@@ -71,18 +79,17 @@
 		<td>
 			<div id="week" class="checkboxes">
 				<h3>Dia da semana:</h3>
-				<input type="checkbox" class="week" id="week_0" value="0" /><label for="week_0">Domingo</label>
-				<input type="checkbox" class="week" id="week_1" value="0" /><label for="week_1">Segunda-feira</label>
-				<input type="checkbox" class="week" id="week_2" value="0" /><label for="week_2">Terça-feira</label>
-				<input type="checkbox" class="week" id="week_3" value="0" /><label for="week_3">Quarta-feira</label>
-				<input type="checkbox" class="week" id="week_4" value="0" /><label for="week_4">Quinta-feira</label><br/>
-				<input type="checkbox" class="week" id="week_5" value="0" /><label for="week_5">Sexta-feira</label>
-				<input type="checkbox" class="week" id="week_6" value="0" /><label for="week_6">Sábado</label>
+				<input type="checkbox" class="week" id="week_0" value="0" /><label for="week_0">Dom</label>
+				<input type="checkbox" class="week" id="week_1" value="0" /><label for="week_1">Seg</label>
+				<input type="checkbox" class="week" id="week_2" value="0" /><label for="week_2">Ter</label>
+				<input type="checkbox" class="week" id="week_3" value="0" /><label for="week_3">Qua</label>
+				<input type="checkbox" class="week" id="week_4" value="0" /><label for="week_4">Qui</label>
+				<input type="checkbox" class="week" id="week_5" value="0" /><label for="week_5">Sex</label>
+				<input type="checkbox" class="week" id="week_6" value="0" /><label for="week_6">Sáb</label>
 			</div>
 		</td>
 		<td>
 			<select name="week-level" id="id_week-level">
-				<option value="None">- Escolha o tipo de backup: -</option>
 				{% for level in levels %}
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
@@ -94,7 +101,7 @@
 		<td>
 			<div id="hours" class="checkboxes">
 				<h3>Hora:</h3>
-				<input type="checkbox" class="hours" id="hour_00" /><label for="hour_00">00</label>
+				<input type="checkbox" class="hours" id="hour_00" checked="checked" /><label for="hour_00">00</label>
 				<input type="checkbox" class="hours" id="hour_01" /><label for="hour_01">01</label>
 				<input type="checkbox" class="hours" id="hour_02" /><label for="hour_02">02</label>
 				<input type="checkbox" class="hours" id="hour_03" /><label for="hour_03">03</label>
@@ -122,7 +129,6 @@
 		</td>
 		<td>
 			<select name="day-level" id="id_day-level">
-				<option value="None">- Escolha o tipo de backup: -</option>
 				{% for level in levels %}
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
@@ -134,7 +140,7 @@
 		<td>
 			<div id="minutes" class="checkboxes">
 				<h3>Minuto:</h3>
-				<input type="checkbox" class="minutes" id="minute_00" /><label for="minute_00">00</label>
+				<input type="checkbox" class="minutes" id="minute_00" checked="checked" /><label for="minute_00">00</label>
 				<input type="checkbox" class="minutes" id="minute_01" /><label for="minute_01">01</label>
 				<input type="checkbox" class="minutes" id="minute_02" /><label for="minute_02">02</label>
 				<input type="checkbox" class="minutes" id="minute_03" /><label for="minute_03">03</label>
@@ -198,7 +204,6 @@
 		</td>
 		<td>
 			<select name="hour-level" id="id_hour-level">
-				<option value="None">- Escolha o tipo de backup: -</option>
 				{% for level in levels %}
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
@@ -208,10 +213,11 @@
 	</tr>
 </table>
 <h3>Agendamentos selecionados</h3>
-<table id="inventory" style="border: solid 1px; width: 400px;">
+<table id="inventory" cellpadding="0" cellspacing="0">
 	<thead>
-		<tr><th>Remover</th><th>Tipo</th><th>Frequência</th><th>Dia</th><th>Hora</th></tr>
+		<tr><th>&nbsp;</th><th>Tipo</th><th>Frequência</th><th>Dia</th><th>Hora</th></tr>
 	</thead>
+	<tbody></tbody>
 </table>
 {% if is_model %}
 <p>
@@ -222,9 +228,9 @@
 <input type="hidden" id="schedule_name" value="Apenas para este procedimento"/>
 {% endif %}
 {% if reload %}
-<button onclick="if (create_schedule() == true) {window.location.reload()}">Criar</button>
+<a href="#" onclick="if (create_schedule() == true) {window.location.reload()}" class="minibutton"><span>Criar Agendamento</span></a>
 {% else %}
-<button onclick="create_schedule()">Criar</button>
+<a href="#" onclick="create_schedule()" class="minibutton"><span>Criar Agendamento</span></a>
 {% endif %}
-
+</div>
 {% endblock %}
