--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -1,6 +1,27 @@
 {% block headtags %}
+    <!-- teste -->
+<!--
+    <script type="text/javascript" src="/media/lib/js/jquery.js"></script>
+    <script type="text/javascript" src="/media/main.js"></script>
+	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
+    <script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
+	<script type="text/javascript" src="/media/lib/js/jquery.wysiwyg.js"></script>
+	<script type="text/javascript" src="/media/lib/js/jquery.date_input.pack.js"></script>
+	<script type="text/javascript" src="/media/lib/js/facebox.js"></script>
+	<script type="text/javascript" src="/media/lib/js/ajaxupload.js"></script>
+	<script type="text/javascript" src="/media/lib/js/jquery.pngfix.js"></script>
+	<script type="text/javascript" src="/media/lib/js/jquery.filetree.js"></script>
+	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript"></script>
+	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript"></script>
+	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript"></script>
+	<script src="/media/js/jquery.maskedinput-1.2.2.min.js" type="text/javascript"></script>
+	<script src="/media/lib/js/jquery.uniform.js" type="text/javascript"></script>
+-->
+    <!-- fim do teste-->
 	<link rel="stylesheet" type="text/css" href="/media/css/overcast/jquery-ui-1.8.13.custom.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/style.css" />
+	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/media/js/schedules.js"></script>
 	<script type="text/javascript">
 		// ESTE CODIGO TEM QUE FICAR AQUI
@@ -23,13 +44,14 @@
 		}
 		.remove_schedule{cursor: pointer;}
 		.first_table td{border-bottom: 1px solid #c0c0c0; margin-bottom: 10px;}
+		.border{border-top: 1px solid #c0c0c0;}
 	</style>
 {% endblock %}
 
 {% block page %}
 <div class="block">
 <table class="first_table">
-	<tr>
+	<tr class="border">
 		<td>
 			<div id="month" class="checkboxes">
 				<h3>Dia do mês:</h3>
@@ -44,7 +66,7 @@
 				<input type="checkbox" class="month" id="month_09" name="09"/><label for="month_09">09</label>
 				<input type="checkbox" class="month" id="month_10" name="10"/><label for="month_10">10</label>
 				<input type="checkbox" class="month" id="month_11" name="11"/><label for="month_11">11</label>
-				<input type="checkbox" class="month" id="month_12" name="12"/><label for="month_12">12</label><br/>
+				<input type="checkbox" class="month" id="month_12" name="12"/><label for="month_12">12</label><br />
 				<input type="checkbox" class="month" id="month_13" name="13"/><label for="month_13">13</label>
 				<input type="checkbox" class="month" id="month_14" name="14"/><label for="month_14">14</label>
 				<input type="checkbox" class="month" id="month_15" name="15"/><label for="month_15">15</label>
@@ -56,7 +78,7 @@
 				<input type="checkbox" class="month" id="month_21" name="21"/><label for="month_21">21</label>
 				<input type="checkbox" class="month" id="month_22" name="22"/><label for="month_22">22</label>
 				<input type="checkbox" class="month" id="month_23" name="23"/><label for="month_23">23</label>
-				<input type="checkbox" class="month" id="month_24" name="24"/><label for="month_24">24</label><br/>
+				<input type="checkbox" class="month" id="month_24" name="24"/><label for="month_24">24</label><br />
 				<input type="checkbox" class="month" id="month_25" name="25"/><label for="month_25">25</label>
 				<input type="checkbox" class="month" id="month_26" name="26"/><label for="month_26">26</label>
 				<input type="checkbox" class="month" id="month_27" name="27"/><label for="month_27">27</label>
@@ -75,7 +97,7 @@
 			<a class="minibutton" id="month_button"><span>Agendamento Mensal</span></a>
 		</td>
 	</tr>
-	<tr>
+	<tr class="border">
 		<td>
 			<div id="week" class="checkboxes">
 				<h3>Dia da semana:</h3>
@@ -97,7 +119,7 @@
 			<a class="minibutton" id="week_button"><span>Agendamento Semanal</span></a>
 		</td>
 	</tr>
-	<tr>
+	<tr class="border">
 		<td>
 			<div id="hours" class="checkboxes">
 				<h3>Hora:</h3>
@@ -112,7 +134,7 @@
 				<input type="checkbox" class="hours" id="hour_08" /><label for="hour_08">08</label>
 				<input type="checkbox" class="hours" id="hour_09" /><label for="hour_09">09</label>
 				<input type="checkbox" class="hours" id="hour_10" /><label for="hour_10">10</label>
-				<input type="checkbox" class="hours" id="hour_11" /><label for="hour_11">11</label></br>
+				<input type="checkbox" class="hours" id="hour_11" /><label for="hour_11">11</label><br />
 				<input type="checkbox" class="hours" id="hour_12" /><label for="hour_12">12</label>
 				<input type="checkbox" class="hours" id="hour_13" /><label for="hour_13">13</label>
 				<input type="checkbox" class="hours" id="hour_14" /><label for="hour_14">14</label>
@@ -136,7 +158,7 @@
 			<a class="minibutton" id="day_button"><span>Agendamento Diário</span></a>
 		</td>
 	</tr>
-	<tr>
+	<tr class="border">
 		<td>
 			<div id="minutes" class="checkboxes">
 				<h3>Minuto:</h3>
@@ -151,7 +173,7 @@
 				<input type="checkbox" class="minutes" id="minute_08" /><label for="minute_08">08</label>
 				<input type="checkbox" class="minutes" id="minute_09" /><label for="minute_09">09</label>
 				<input type="checkbox" class="minutes" id="minute_10" /><label for="minute_10">10</label>
-				<input type="checkbox" class="minutes" id="minute_11" /><label for="minute_11">11</label><br/>
+				<input type="checkbox" class="minutes" id="minute_11" /><label for="minute_11">11</label><br />
 				<input type="checkbox" class="minutes" id="minute_12" /><label for="minute_12">12</label>
 				<input type="checkbox" class="minutes" id="minute_13" /><label for="minute_13">13</label>
 				<input type="checkbox" class="minutes" id="minute_14" /><label for="minute_14">14</label>
@@ -163,7 +185,7 @@
 				<input type="checkbox" class="minutes" id="minute_20" /><label for="minute_20">20</label>
 				<input type="checkbox" class="minutes" id="minute_21" /><label for="minute_21">21</label>
 				<input type="checkbox" class="minutes" id="minute_22" /><label for="minute_22">22</label>
-				<input type="checkbox" class="minutes" id="minute_23" /><label for="minute_23">23</label><br/>
+				<input type="checkbox" class="minutes" id="minute_23" /><label for="minute_23">23</label><br />
 				<input type="checkbox" class="minutes" id="minute_24" /><label for="minute_24">24</label>
 				<input type="checkbox" class="minutes" id="minute_25" /><label for="minute_25">25</label>
 				<input type="checkbox" class="minutes" id="minute_26" /><label for="minute_26">26</label>
@@ -175,7 +197,7 @@
 				<input type="checkbox" class="minutes" id="minute_32" /><label for="minute_32">32</label>
 				<input type="checkbox" class="minutes" id="minute_33" /><label for="minute_33">33</label>
 				<input type="checkbox" class="minutes" id="minute_34" /><label for="minute_34">34</label>
-				<input type="checkbox" class="minutes" id="minute_35" /><label for="minute_35">35</label><br/>
+				<input type="checkbox" class="minutes" id="minute_35" /><label for="minute_35">35</label><br />
 				<input type="checkbox" class="minutes" id="minute_36" /><label for="minute_36">36</label>
 				<input type="checkbox" class="minutes" id="minute_37" /><label for="minute_37">37</label>
 				<input type="checkbox" class="minutes" id="minute_38" /><label for="minute_38">38</label>
@@ -187,7 +209,7 @@
 				<input type="checkbox" class="minutes" id="minute_44" /><label for="minute_44">44</label>
 				<input type="checkbox" class="minutes" id="minute_45" /><label for="minute_45">45</label>
 				<input type="checkbox" class="minutes" id="minute_46" /><label for="minute_46">46</label>
-				<input type="checkbox" class="minutes" id="minute_47" /><label for="minute_47">47</label><br/>
+				<input type="checkbox" class="minutes" id="minute_47" /><label for="minute_47">47</label><br />
 				<input type="checkbox" class="minutes" id="minute_48" /><label for="minute_48">48</label>
 				<input type="checkbox" class="minutes" id="minute_49" /><label for="minute_49">49</label>
 				<input type="checkbox" class="minutes" id="minute_50" /><label for="minute_50">50</label>
@@ -204,11 +226,12 @@
 		</td>
 		<td>
 			<select name="hour-level" id="id_hour-level">
+<!--                 <option value="">- Escolha -</option> -->
 				{% for level in levels %}
 				<option value="{{level.id}}">{{level.name}}</option>
 				{% endfor %}
 			</select><br />
-			<a class="minibutton" id="hour_button"><span>Agendamento de hora em hora</span></a>
+			<a class="minibutton" id="hour_button"><span>Agendamento a cada hora</span></a>
 		</td>
 	</tr>
 </table>
