--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -18,7 +18,8 @@
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/date_input.css" />
 	
 	
-	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
+	<script type="text/javascript" src="/media/jquery.js"></script>
+	<script type="text/javascript" src="/media/jquery.cookie.js"></script>
     <script type="text/javascript" src="/media/main.js"></script>
 	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
     <script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
