FIX: Árvore de arquivos na criação do fileset

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -16,9 +16,10 @@
 	<link rel="stylesheet" type="text/css" href="/media/js/progressbar/jquery.ui.all.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/uniform.default.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/date_input.css" />
+	<link rel="stylesheet" type="text/css" href="/media/lib/css/css3buttons.css" />
 	
 	
-	<script type="text/javascript" src="/media/jquery.js"></script>
+	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
 	<script type="text/javascript" src="/media/jquery.cookie.js"></script>
     <script type="text/javascript" src="/media/main.js"></script>
 	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
@@ -133,8 +134,8 @@
             {%endblock%}
 
 			<div id="footer">
-				<p class="left"><a href="http://nimbusbackup.com">Nimbus</a> Professional Backup - Um produto <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a></p>
-				<p class="right">Nimbus v1.0</p>
+				<p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a></p>
+				<p class="right">Nimbus Opensource v1.0</p>
 			</div>
 		</div>
 	</div>
