--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -52,9 +52,12 @@
 				<input type="text" name="pool_retention_alt" id="pool_retention_alt" maxlength="4" value="" class="text small" /><br />
 			</div>
 			<hr />
-			<p>
+			<!--
+<p>
 				<input type="submit" class="submit" value="Criar" />
 			</p>
+-->
+			<p><button type="submit" value="submit" class="css3button big">Adicionar Backup</button></p>
 		</form>
 		<form action="/schedules/add/" method="POST" id="to_schedule_form"></form>
 	</div>
