FIX: listagem de arquivos bugada na revisão e815703b696dad5a233ed48ab0a8533d5eed4aa1

--- a/nimbus/filesets/templates/add_fileset.html
+++ b/nimbus/filesets/templates/add_fileset.html
@@ -19,7 +19,7 @@
 			<input type="hidden" name="files-INITIAL_FORMS" value="0" id="id_files-INITIAL_FORMS">
 			<input type="hidden" name="files-MAX_NUM_FORMS" id="id_files-MAX_NUM_FORMS">
 			<input type="hidden" value="{{ computer.id }}" id="computer_id" />
-			<ul class="tree"><li class="directory first"><span><a href="#" path="/home">Arquivos</a></span></li></ul>
+			<ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
 			<hr />
 			<span id="field_error_0" class="field_error" style="display: none;">Preencha os campos abaixo corretamente<br/></span>
 			<p {% if hide_name %}class="hidden"{% endif %}>
